--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ультралегкая дышащая рабочая обувь</title>
+    <title>Женские ботинки Martin на толстой подошве</title>
 
     <script>
       !(function (w, d, t) {
@@ -44,13 +44,12 @@
               (ttq._t[e] = +new Date()),
               (ttq._o = ttq._o || {}),
               (ttq._o[e] = n || {});
-            n = document.createElement('script');
-            (n.type = 'text/javascript'), (n.async = !0), (n.src = i + '?sdkid=' + e + '&lib=' + t);
-            e = document.getElementsByTagName('script')[0];
-            e.parentNode.insertBefore(n, e);
+            var o = document.createElement('script');
+            (o.type = 'text/javascript'), (o.async = !0), (o.src = i + '?sdkid=' + e + '&lib=' + t);
+            var a = document.getElementsByTagName('script')[0];
+            a.parentNode.insertBefore(o, a);
           });
-
-        ttq.load('CM6KF2RC77UDQH67FUI0');
+        ttq.load('CHACPORC77U3G72V70CG');
         ttq.page();
       })(window, document, 'ttq');
     </script>
@@ -71,7 +70,7 @@
         (k = e.createElement(t)), (a = e.getElementsByTagName(t)[0]), (k.async = 1), (k.src = r), a.parentNode.insertBefore(k, a);
       })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-      ym(96451175, 'init', {
+      ym(96456062, 'init', {
         clickmap: true,
         trackLinks: true,
         accurateTrackBounce: true,
@@ -81,7 +80,7 @@
   </head>
   <body>
     <noscript
-      ><div><img src="https://mc.yandex.ru/watch/96451175" style="position: absolute; left: -9999px" alt="" /></div
+      ><div><img src="https://mc.yandex.ru/watch/96456062" style="position: absolute; left: -9999px" alt="" /></div
     ></noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
