--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
               (ttq._t[e] = +new Date()),
               (ttq._o = ttq._o || {}),
               (ttq._o[e] = n || {});
-            var o = document.createElement('script');
-            (o.type = 'text/javascript'), (o.async = !0), (o.src = i + '?sdkid=' + e + '&lib=' + t);
-            var a = document.getElementsByTagName('script')[0];
-            a.parentNode.insertBefore(o, a);
+            n = document.createElement('script');
+            (n.type = 'text/javascript'), (n.async = !0), (n.src = i + '?sdkid=' + e + '&lib=' + t);
+            e = document.getElementsByTagName('script')[0];
+            e.parentNode.insertBefore(n, e);
           });
-        ttq.load('CHACPORC77U3G72V70CG');
+
+        ttq.load('CN6VPNJC77U0CFAO135G');
         ttq.page();
       })(window, document, 'ttq');
     </script>
