--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Женские ботинки Martin на толстой подошве</title>
+    <title>Ортопедические ботинки Martin на толстой подошве</title>
 
     <script>
       !(function (w, d, t) {
